--- a/explore_dataset.ipynb
+++ b/explore_dataset.ipynb
@@ -1051,7 +1051,10 @@
     "ax[1].tick_params(axis='x', labelrotation=90)\n",
     "\n",
     "# update and save figure\n",
-    "plt.savefig(r'fig\\bar_features')\n",
+    "plt.savefig(\n",
+    "    r'fig\\bar_features',\n",
+    "    bbox_inches=\"tight\"\n",
+    ")\n",
     "plt.show()"
    ]
   },
